--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2019,6 +2019,7 @@ textarea.form-input::-webkit-resizer {
 
   .social-list {
     justify-content: center;
+    padding-bottom: 20px;
   }
 
   /**
