--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,6 +329,54 @@ main {
 }
 
 /*-----------------------------------*\
+  #RESUME
+\*-----------------------------------*/
+
+/* Overlay Styles */
+.overlay {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay iframe {
+  width: 80%;
+  height: 80%;
+  border: none;
+  border-radius: 12px;
+}
+
+/* Responsive adjustments */
+@media (max-width: 1200px) {
+  .overlay iframe {
+    width: 80%;
+    height: 80%;
+  }
+}
+
+@media (max-width: 768px) {
+  .overlay iframe {
+    width: 80%;
+    height: 90%;
+  }
+}
+
+@media (max-width: 576px) {
+  .overlay iframe {
+    width: 80%;
+    height: 80%;
+    border-radius: 12;
+  }
+}
+
+/*-----------------------------------*\
   #SIDEBAR
 \*-----------------------------------*/
 
@@ -340,7 +388,7 @@ main {
 }
 
 .sidebar.active {
-  max-height: 405px;
+  max-height: 505px;
 }
 
 .sidebar-info {
@@ -351,9 +399,16 @@ main {
   gap: 15px;
 }
 
+.resume-center {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .avatar-box {
   background: var(--bg-gradient-onyx);
-  border-radius: 20px;
+  border-radius: 14px;
 }
 
 .info-content .name {
