--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,28 +351,31 @@ main {
   height: 80%;
   border: none;
   border-radius: 12px;
+  transition: transform 0.3s ease;
 }
 
 /* Responsive adjustments */
 @media (max-width: 1200px) {
   .overlay iframe {
-    width: 80%;
-    height: 80%;
+    width: 90%;
+    height: 85%;
   }
 }
 
 @media (max-width: 768px) {
   .overlay iframe {
-    width: 80%;
+    width: 95%;
     height: 90%;
+    transform: scale(0.8); /* Zoom in on tablet-sized screens */
   }
 }
 
 @media (max-width: 576px) {
   .overlay iframe {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 95%;
     border-radius: 12;
+    transform: scale(1); /* Zoom in more on mobile screens */
   }
 }
 
